@@ -1,114 +1,94 @@
 [![][ButlerImage]][website] 
 
 
-A simple RPC framework base on Netty.
-==========
-## 1. Overview ##
------
-	
-RenRPC is an easy-to-use RPC framework, that base on netty.io ,zookeeper, protobuf,etc.
-The server-side is built upon netty which supports asynchronous and non-blocking io functionality, while the client-side provides a wide variety of options to communicate with server, which includes short live connection, keep-alive tcp connection, high availability and failover strategy.
+An monolith shopping system based on springboot tech stack with rest API service and freemark backend management GUI.
+DingDing v1.0 (for java 1.8 +)
+-------------------
+
+Java open source e-commerce software
+
+- Shopping cart
+- Catalogue
+- Search
+- Checkout
+- Administration
+- REST API
+
+See the demo:
+-------------------
+http://www.dingding.com:8080
 
 
+To get the code:
+-------------------
+Clone the repository:
+$ git clone https://github.com/weixuan2008/dingding-monolith.git
 
-## 2. Features ##
------
-- Simple and small code base, low cost to learn and use.
-- With high performance[see benchmark data]
-- Support sync and async call for your various requirement.
-- Long lived persistent connection, reconnect to server automatically with heartbeat check.
-- Service register and discovery use zookeeper.
-- load balance with round robin and consistent hash,etc.
-- protobuf encoder/decoder.
-- With spring DI and parameter configuration.
-- Other language support(unimplemented yet).
+If this is your first time using Github, review http://help.github.com to learn the basics.
 
+You can also download the zip file containing the code from https://github.com/weixuan2008/dingding-monolith/archive/master.zip
 
-## 3. Usage: ##
------
-**1. Define an obj interface**
-	
-	public interface Rng {
-		int nextInt(int max);
-		long nextLong(long max);
-	}
-**2. Implements the previous defined interface**
-	@RpcService(Rng.class)
-	public class RngImpl implements Rng {
-		private UniformRandomProvider rng ;
-		private static RngImpl INSTANCE = new RngImpl();
-	
-		private RngImpl() {
-			// Instantiate a "Mersenne-Twister" generator with a factory method.
-			rng = RandomSource.create(RandomSource.MT);
-		}
-		public static RngImpl getInstance() {
-			return INSTANCE;
-		}
-	
-		@Override
-		public int nextInt(int max) {
-			return rng.nextInt(max);
-		}
-	
-		@Override
-		public long nextLong(long max) {
-			return rng.nextLong(max);
-		}
-	}
+To build the application:
+-------------------	
+From the command line with Maven installed:
 
-
-
-**3. **Complete 2 configuration files, one is zookeeper location and spring bean scan in server-side.****
-	
-	// zookeeper address configuration	
-	rng.registry.address=192.168.56.101:2181
-
-	// beans configuration in spring
-	<context:component-scan base-package="com.hy.rng.service.impl" />
-
-	<context:property-placeholder location="classpath:rng-service-config.properties" />
-
-	<!-- configuration for service registry component -->
-	<bean id="serviceRegistry" class="com.hy.ren.rpc.registry.zk.ZKServiceRegistry">
-		<constructor-arg name="zkAddress" value="${rng.registry.address}" />
-	</bean>
-
-	<!-- configuration for RPC service -->
-	<bean id="rpcProvider" class="com.hy.ren.rpc.provider.RpcProvider">
-		<constructor-arg name="serviceAddress" value="${rng.service.address}" />
-		<constructor-arg name="serviceRegistry" ref="serviceRegistry" />
-	</bean>
+	$ cd dingding-monolith-master
+	$ mvn clean install -Dmaven.test.skip=true
 	
 
-**4. Start server with simplest way**
+Run the application from Tomcat 
+-------------------
+copy sm-shop/target/ROOT.war to tomcat or any other application server deployment dir
 
-	new ClassPathXmlApplicationContext("spring-rng-service.xml");
+Increase heap space to 1024 m or at least 512 m
 
-**5. Complete 2 configuration files, one is zookeeper location and spring bean scan in client-side.**
-
-	please refer to server-side configuration.
-
-**6. Complete client invocation code according your need.**
-
-	ApplicationContext context = new ClassPathXmlApplicationContext("spring-rng-client.xml");
-	RpcProxy rpcProxy = context.getBean(RpcProxy.class);
-
-	Rng rng = null;
-	try {
-		rng = rpcProxy.create(Rng.class, "");
-	} catch (InterruptedException e) {
-		logger.error(e.getMessage());
-	}
-
-All is done for your RPC call. 
+### Heap space configuration in Tomcat:
 
 
-## 4. Performance test ##
------
- [in progress]
+If you are using Tomcat, edit catalina.bat for windows users or catalina.sh for linux / Mac users
+
+	in Windows
+	set JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
+	
+	in Linux / Mac
+	export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
+
+Run the application from Spring boot 
+-------------------
+
+       $ cd sm-shop
+       $ mvn spring-boot:run
+
+Run the application from Spring boot in eclipse
+-------------------
+
+Right click on com.salesmanager.shop.application.ShopApplication
+
+run as Java Application
+
+### Access the application:
+-------------------
+
+Access the deployed web application at: http://localhost:8080/
+
+Acces the admin section at: http://localhost:8080/admin
+
+#####username : admin
+#####password : password
+
+The instructions above will let you run the application with default settings and configurations.
+Please read the instructions on how to connect to MySQL, configure an email server and configure other subsystems
+
+
+### Documentation:
+-------------------
+
+Documentation available from the wiki <https://github.com/shopizer-ecommerce/shopizer/wiki>
+
+More documentation is available on shopizer web site here <http://www.shopizer.com>
 
 
 
-[ButlerImage]: https://github.com/weixuan2008/RenRPC/blob/master/renrpc-master/RenRPC.png
-[website]: https://github.com/weixuan2008/RenRPC
+
+[ButlerImage]: https://github.com/weixuan2008/dingding-monolith/blob/master/dingding-monolith-master/core/dingding-micro-service/src/main/resources/static/images/dingding-red.png
+[website]: https://github.com/weixuan2008/dingding-monolith
